https://online.sbis.ru/opendoc.html?guid=ebc2169c-93f5-483c-a93f-36c75b0ec613&des= Ошибка в разработку 19.06.2017 Неправильно сделаны переносы слов в панели фильтра (см. скрин) …

--- a/components/FilterPanel/FilterPanel-components/FilterPanelChooser/FilterPanelChooser.BaseList/FilterPanelChooser.BaseList.less
+++ b/components/FilterPanel/FilterPanel-components/FilterPanelChooser/FilterPanelChooser.BaseList/FilterPanelChooser.BaseList.less
@@ -65,3 +65,18 @@
       }
    }
 }
+
+body:not(.ws-is-chrome) {
+   .controls-FilterPanelChooser {
+      .controls-ListView {
+         .controls-ListView__itemsContainer {
+            .controls-ListView__item {
+               .controls-FilterPanelChooser__title {
+                  word-break: normal;
+                  .hyphens(auto);
+               }
+            }
+         }
+      }
+   }
+}
