--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -365,7 +365,7 @@
             .controls-Button__icon {
                height: @DropdownList-footer-select-icon-size;
                width: @DropdownList-footer-select-icon-size;
-               line-height: @DropdownList-footer-select-icon-size;
+               line-height: @DropdownList-footer-select-icon-size !important;
             }
          }
       }
