--- a/components/FilterPanel/FilterPanel.less
+++ b/components/FilterPanel/FilterPanel.less
@@ -64,7 +64,7 @@
          }
          .controls-Spoiler__resetFilterField {
             float: left;
-            padding: 7px 8px 0 4px;
+            padding: 0 8px 0 4px;
          }
       }
    }
