--- a/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
+++ b/components/ListView/resources/ItemsToolbar/ItemsToolbar.less
@@ -35,8 +35,11 @@
    .controls-ItemActions__item {
       line-height: @list-view-items-toolbar-line-height !important;
       &.controls-IconButton__round-border-24 {
-         line-height: @list-view-items-toolbar-vertical-line-height !important;
+         line-height: @list-view-items-toolbar-line-height !important;
       }
+   }
+   .controls-IconButton.controls-IconButton__round-border-24 {
+      line-height: @list-view-items-toolbar-line-height !important;
    }
    .controls-ItemActions__menu-button {
       display: none;
@@ -128,7 +131,7 @@
             .controls-ItemActions__item {
                line-height: @list-view-items-toolbar-line-height !important;
                &.controls-IconButton__round-border-24 {
-                  line-height: @list-view-items-toolbar-vertical-line-height !important;
+                  line-height: @list-view-items-toolbar-line-height !important;
                }
             }
          }
