--- a/components/ToggleButton/ToggleButton.less
+++ b/components/ToggleButton/ToggleButton.less
@@ -1,89 +1,49 @@
-.toggle-button-mixin(@icon-left, @icon-width, @border-width, @margin-left, @margin-right){
-  left: calc(@icon-left ~"-" @border-width);
-
-  & + .controls-Button__text {
-    margin-right: calc(@margin-right ~"-" @border-width);
-    margin-left: calc(@margin-left ~"+" @icon-width ~"+" @button-icon-gap ~"-" @border-width);
-  }
-}
-
 .controls-Button {
   &.controls-ToggleButton__normal {
     &.controls-Checked__checked:not(.ws-disabled) {
-      line-height: @button-checked-line-height;
-      &.controls-Button__default {
-        border: @button-checked-border;
-        background: @button-checked-bg;
-      }
-      &.controls-Button__primary {
-        border: @button-primary-checked-border;
-        background: @button-primary-checked-bg;
+      border-width: @button-checked-border-width;
+
+      &.controls-Button-color__ {
+        &default {
+          background: @button-checked-bg;
+        }
+        &primary {
+          background: @button-primary-checked-bg;
+        }
       }
 
-      .controls-Button__text {
-        margin-left: @button-checked-text-margin-left;
-        margin-right: @button-checked-text-margin-right;
+      &.controls-Button-size__ {
+        &default:not(.controls-Button__big) {
+          .controls-Button__wrapper {
+            padding: @button-checked-padding;
+          }
+        }
+        &l {
+          .controls-Button__wrapper {
+            padding: @button-big-checked-padding;
+          }
+        }
       }
-
-      .controls-Button__icon.icon-16 {
-        .toggle-button-mixin(@button-icon-left-offset; @icon-small-size; @button-checked-border-width; @button-text-margin-left; @button-text-margin-right);
-      }
-
-      .controls-Button__icon.icon-24 {
-        .toggle-button-mixin(@button-icon-big-left-offset, @icon-medium-size, @button-checked-border-width, @button-text-margin-left, @button-text-margin-right);
-      }
-
-      .controls-Button__icon.icon-small {
-        .toggle-button-mixin(@button-icon-left-offset; @icon-small-size; @button-checked-border-width; @button-text-margin-left; @button-text-margin-right);
-      }
-      .controls-Button__icon.icon-medium {
-        .toggle-button-mixin(@button-icon-medium-left-offset; @icon-medium-size; @button-checked-border-width; @button-text-margin-left; @button-text-margin-right);
-      }
-      .controls-Button__icon.icon-large {
-        .toggle-button-mixin(@button-icon-large-left-offset; @icon-large-size; @button-border-width; @button-text-margin-left; @button-text-margin-right);
-      }
-
-      &.controls-Button__withoutCaption {
-        .controls-Button__icon {
-          margin-left: 0;
+      &.controls-Button__big {
+        .controls-Button__wrapper {
+          padding: @button-big-checked-padding;
         }
       }
     }
   }
 }
-
-.controls-Button.controls-Button__big.controls-Checked__checked:not(.ws-disabled) {
-    //graceful degradation pattern
-    //firefox 45 not support calc in line-height property
-    //https://bugzilla.mozilla.org/show_bug.cgi?id=594933
-    line-height: @button-big-height - 2 * @button-checked-border-width;
-    line-height: calc(@button-big-height ~"-" 2 * @button-checked-border-width);
-    .controls-Button__text {
-      margin-left: @button-big-checked-text-margin-left;
-      margin-right: @button-big-checked-text-margin-right;
-    }
-    .controls-Button__icon.icon-16 {
-      .toggle-button-mixin(@button-big-icon-big-left-offset, @icon-small-size, @button-checked-border-width, @button-big-text-margin-left, @button-big-text-margin-right);
-    }
-    .controls-Button__icon.icon-24 {
-      .toggle-button-mixin(@button-big-icon-big-left-offset, @icon-medium-size, @button-checked-border-width, @button-big-text-margin-left, @button-big-text-margin-right);
-    }
-    .controls-Button__icon.icon-32 {
-      .toggle-button-mixin(@button-big-icon-32-left-offset, @icon-large-size, @button-checked-border-width, @button-big-text-margin-left, @button-big-text-margin-right);
-    }
-
-}
-
 
 .ws-is-desktop-platform {
   .controls-Button:not(.ws-disabled) {
     &.controls-ToggleButton__normal {
       &:hover {
-        &.controls-Button__default.controls-Checked__checked {
-          border: @button-checked-border !important;
-        }
-        &.controls-Button__primary.controls-Checked__checked {
-          border: @button-primary-checked-border !important;
+        &.controls-Checked__checked.controls-Button-color__ {
+          &default {
+             border: @button-checked-border !important;
+          }
+          &primary {
+             border: @button-primary-checked-border !important;
+          }
         }
       }
     }
