--- a/themes/carrynew/control-list.less
+++ b/themes/carrynew/control-list.less
@@ -1,6 +1,7 @@
 @import "../../components/Link/Link";
 
 @import "../../components/Button/Button";
+@import "../../components/WSControls/Buttons/resources/ButtonBase";
 @import "../../components/ButtonGroup/ButtonGroup";
 @import "../../components/ToggleButton/ToggleButton";
 @import "../../components/CommandsSeparator/CommandsSeparator";
