--- a/themes/carrynew/theme.less
+++ b/themes/carrynew/theme.less
@@ -13,7 +13,7 @@ body {
   }
    .controls-ListView__scrollPager {
       .controls-IconButton {
-         background: @button-bg;
+         background: @button-bg-color;
          .controls-Button__icon {
             color: @button-text-color !important;
          }
