--- a/themes/carrynew/variables.less
+++ b/themes/carrynew/variables.less
@@ -36,14 +36,14 @@
 @button-icon-color-hover:                 #313E78;
 // Normal default button
 @button-text-color:                       #2c3e50;
-@button-active-bg:                        #e0ecf5;
+@button-bg-active:                        #e0ecf5;
 @button-hover-bg:                         #e0ecf5;
-@button-bg: 								      #f0f5fb;
+@button-bg-color:                         #f0f5fb;
 // Normal primary button
 @button-primary-text-color:               #fff;
-@button-primary-bg:                       #ff7033;
+@button-primary-bg-color:                 #ff7033;
 @button-primary-hover-bg:                 #EC5B19;
-@button-primary-active-bg:                #d94700;
+@button-primary-bg-active:                #d94700;
 @button-primary-active-text-color:        @button-primary-text-color;
 // Normal disabled button
 @button-disabled-text-color:              @gray-color;
