--- a/themes/mixins.less
+++ b/themes/mixins.less
@@ -151,6 +151,14 @@
   border: none;
   padding: 0;
 }
+.button-wrapper-default-style() {
+  .inline-flexbox();
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  .align-items(center);
+  .justify-content(center);
+}
 
 .baseline-fix(@height: auto) {
   &:before {
