--- a/themes/presto/variables.less
+++ b/themes/presto/variables.less
@@ -129,7 +129,7 @@
 
 @button-active-text-color:                @secondary-color;
 @button-active-border:                    0 none;
-@button-active-bg:                        lighten(@primary-color, 10%);
+@button-bg-active:                        lighten(@primary-color, 10%);
 
 // Normal primary button
 @button-primary-text-color:               @black-color;
@@ -143,7 +143,7 @@
 @button-primary-active-text-color:        @button-active-text-color;
 @button-primary-active-border:            @button-active-border;
 @button-primary-active-shadow:            @button-active-shadow;
-@button-primary-active-bg:                @button-active-bg;
+@button-primary-active-bg:                @button-bg-active;
 
 // Normal disabled button
 @button-disabled-text-color:              @gray-color;
@@ -188,7 +188,7 @@
 @button-checked-border-width:             @button-border-width;
 @button-checked-font-weight:              normal;
 @button-checked-border:                   @button-active-border;
-@button-checked-bg:                       @button-active-bg;
+@button-checked-bg:                       @button-bg-active;
 @button-checked-icon-top-offset:          @button-icon-top-offset;
 @button-checked-icon-left-offset:         @button-icon-left-offset;
 @button-checked-icon-big-top-offset:      @button-icon-big-top-offset;
