--- a/components/DateRangeBigChoose/DateRangeBigChoose.less
+++ b/components/DateRangeBigChoose/DateRangeBigChoose.less
@@ -17,7 +17,7 @@
 
 .range-button-bar-mixin () {
    //.controls-DateRangeBigChoose__months-range-btn-wrapper {
-      .controls-Button.controls-Button__default {
+      .controls-Button {
          .border-radius(0);
          &.controls-RangeSelectable__item.controls-RangeSelectable__item-selected {
             .buttonbar-selected-button();
@@ -29,13 +29,13 @@
       }
 
       .controls-RangeSelectable__item.controls-RangeSelectable__item-selected {
-         .controls-Button.controls-Button__default {
+         .controls-Button {
             .buttonbar-selected-button();
          }
 
          &.controls-RangeSelectable__item-selectedStart,
          &.controls-RangeSelectable__item-selectedEnd {
-            .controls-Button.controls-Button__default {
+            .controls-Button {
                .buttonbar-selected-boundary-button();
             }
          }
@@ -51,6 +51,7 @@
       border-bottom: none;
       .controls-Button__text {
          margin: 0;
+         overflow: initial;
       }
    }
    :first-child {
@@ -89,7 +90,6 @@
          line-height: @date-range-big-choose-header-home-button-line-height !important;
          .controls-Button__icon.icon-16 {
             font-size: @date-range-big-choose-header-home-button-font-size !important;
-            margin-left: -@date-range-big-choose-header-home-button-margin-left;
          }
       }
 
@@ -107,7 +107,6 @@
          .controls-Button__icon.icon-16 {
             font-size: @date-range-big-choose-header-apply-button-font-size !important;
             width: @date-range-big-choose-header-apply-button-font-size;
-            margin-left: @date-range-big-choose-header-apply-button-icon-margin-left;
          }
       }
       .controls-DateRangeBigChoose__header-rangeDash {
@@ -201,7 +200,7 @@
       .controls-DateRangeBigChoose__yearsRange {
          .range-button-bar-mixin();
 
-         span.controls-Button {
+         a.controls-Button {
             .inline-flexbox();
             .justify-content(center);
             .align-items(center);
@@ -220,6 +219,7 @@
             .controls-Button__text {
                margin: 0;
                padding: 0;
+               overflow: initial;
             }
             &.controls-RangeSelectable__item.controls-RangeSelectable__item-selected:not(.controls-RangeSelectable__item-selectedStart) {
                border-left: none;
@@ -316,7 +316,7 @@
 
       .controls-DateRangeBigChoose__months-range-btn-wrapper {
          .box-sizing(border-box);
-         > span {
+         > a {
             width: @date-range-big-choose-left-right-width;
             height: 100%;
             background-color: transparent;
@@ -331,7 +331,7 @@
             border-top: none;
             + .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
                border-top: 1px solid @date-range-big-choose-border-color;
-               > span {
+               > a {
                   border-top: none;
                }
             }
@@ -346,7 +346,7 @@
          left: 0;
 
          .controls-DateRangeBigChoose__months-range-btn-wrapper {
-            > span {
+            > a {
                border-left-color: transparent;
             }
             &.controls-DateRangeBigChoose__months-range-btn-wrapper0 {
@@ -371,7 +371,7 @@
             &.controls-DateRangeBigChoose__months-range-btn-wrapper0 {
                height: ~"calc("@date-range-big-choose-months-range-btn-height~"*2 + "@date-range-big-choose-months-margin~" - 1px)";
             }
-            > span {
+            > a {
                float: right;
                border-right-color: transparent;
                &:after {
@@ -419,7 +419,7 @@
          width: @date-range-big-choose-months-range-width;
          .range-vertical-button-bar-mixin();
 
-         span.controls-Button.controls-Button__default {
+         a.controls-Button.controls-Button__default {
             .inline-flexbox();
             .justify-content(flex-start);
             .align-items(center);
@@ -430,9 +430,13 @@
             color: @date-range-big-choose-months-color;
             font-size: @date-range-big-choose-months-font-size;
             text-align: left;
-            padding-left: 8px;
+            padding-left: @date-range-big-choose-months-padding;
             border-left-color: transparent;
             background-color: transparent;
+            .controls-Button__wrapper {
+               padding: 0;
+               .justify-content(@date-range-big-choose-months-text-align);
+            }
 
             &:first-child {
                height: @date-range-big-choose-months-button-first-height;
@@ -519,16 +523,16 @@ body:not(.ws-is-mobile-platform) {
       .controls-DateRangeBigChoose__months {
 
          .controls-DateRangeBigChoose__months-range-btn-wrapper {
-            > span:hover {
+            > a:hover {
                font-weight: bold;
             }
             &:not(.controls-RangeSelectable__item-selected) {
                &:hover {
                   background-color: @date-range-big-choose-bg-hovered-color;
-                  > span {
+                  > a {
                      border-top: none;
                   }
-                  + .controls-DateRangeBigChoose__months-range-btn-wrapper > span {
+                  + .controls-DateRangeBigChoose__months-range-btn-wrapper > a {
                      border-top: none;
                   }
                   + .controls-DateRangeBigChoose__months-range-btn-wrapper {
@@ -548,7 +552,7 @@ body:not(.ws-is-mobile-platform) {
 
          .controls-DateRangeBigChoose__months-quarterRange {
             .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
-               > span:hover {
+               > a:hover {
                   border-left-color: @date-range-big-choose-bg-hovered-color;
                   border-right-color: @date-range-big-choose-bg-hovered-color;
                }
@@ -557,7 +561,7 @@ body:not(.ws-is-mobile-platform) {
 
          .controls-DateRangeBigChoose__months-halfyearRange {
             .controls-DateRangeBigChoose__months-range-btn-wrapper:not(.controls-RangeSelectable__item-selected) {
-               > span:hover {
+               > a:hover {
                   border-right-color:  @date-range-big-choose-bg-hovered-color;
                   border-left-color:  @date-range-big-choose-bg-hovered-color;
                }
@@ -567,7 +571,7 @@ body:not(.ws-is-mobile-platform) {
 
       .controls-DateRangeBigChoose__dates {
          .controls-DateRangeBigChoose__dates-months {
-            span.controls-Button:not(.controls-RangeSelectable__item-selected) {
+            a.controls-Button:not(.controls-RangeSelectable__item-selected) {
                &:hover {
                   border-left-color: @date-range-big-choose-bg-hovered-color;
                   background: @date-range-big-choose-bg-hovered-color;
