--- a/components/WSControls/Buttons/resources/contentTemplate.tmpl
+++ b/components/WSControls/Buttons/resources/contentTemplate.tmpl
@@ -1,4 +1,6 @@
 <ws:if data="{{!!icon}}">
    <i class="controls-Button__icon js-controls-Button__icon {{_iconClass}}"></i>
 </ws:if>
-<span class="controls-Button__text js-controls-Button__text{{(caption === null || caption === '' || caption === undefined) ? ' controls-Button__emptyCaption'}} {{_textClass}}"><ws:if data="{{!(caption === null || caption === '' || caption === undefined)}}">{{caption|sanitize}}</ws:if><ws:else>{{'&nbsp;'|sanitize}}</ws:else></span>
+<ws:if data="{{!!caption}}">
+   <span class="controls-Button__text js-controls-Button__text {{_textClass}}">{{caption|sanitize}}</span>
+</ws:if>
