--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -20,6 +20,8 @@
 // ---- //
 // Link //
 // ---- //
+
+@link-font:                               @default-font-size @default-font-name;
 @link-text-color:                         @primary-color;
 @link-line-height:                        normal;
 @link-hover-text-color:                   @primary-color;
@@ -48,13 +50,14 @@
 @filter-panel-chooser-list-view-check-box-left:                   4px;
 // Normal default button
 @button-border:                           @button-border-width solid @gray-light-color;
-@button-bg:                               @default-color;
+@button-bg-color:                               @default-color;
+@button-border-color:                     @gray-light-color;
 @button-hover-text-color:                 @white-color;
 @button-hover-border:                     1px solid @primary-color;
 @button-hover-bg:                         @primary-color;
 @button-active-text-color:               @primary-color;
 @button-active-border:                    @button-hover-border;
-@button-active-bg:                        @white-color;
+@button-bg-active:                        @white-color;
 // Normal primary button
 @button-primary-text-color:               @white-color;
 @button-primary-bg:                       @primary-color;
@@ -64,7 +67,7 @@
 @button-primary-active-text-color:        @button-active-text-color;
 @button-primary-active-border:            @button-active-border;
 @button-primary-active-shadow:            @button-active-shadow;
-@button-primary-active-bg:                @button-active-bg;
+@button-primary-bg-active:                @button-bg-active;
 // Normal disabled button
 @button-disabled-border:                  @button-border;
 @button-disabled-bg:                      @gray-light-color;
@@ -83,6 +86,11 @@
 @button-big-text-margin:                  0 20px;
 @button-big-text-margin-left:             20px;
 @button-big-text-padding:                 11px 0 0;
+
+@button-large-height:                                                                                                   48px;
+@button-large-border-radius:                                                                                            24px;
+@button-large-font-size:                                                                                                18px;
+
 // ------------ //
 // Button group //
 // ------------ //
@@ -95,7 +103,7 @@
 @button-checked-text-color:               @button-active-text-color;
 @button-checked-border-width:             @button-border-width;
 @button-checked-border:                   @button-active-border;
-@button-checked-bg:                       @button-active-bg;
+@button-checked-bg:                       @button-bg-active;
 @button-checked-text-margin-left:         @button-text-margin-left;
 @button-checked-text-margin-right:        @button-text-margin-right;
 @button-checked-icon-top-offset:          @button-icon-top-offset;
@@ -103,7 +111,7 @@
 @button-checked-icon-big-top-offset:      @button-icon-big-top-offset;
 @button-checked-icon-big-left-offset:     @button-icon-big-left-offset;
 @button-primary-checked-border:           @button-primary-active-border;
-@button-primary-checked-bg:               @button-primary-active-bg;
+@button-primary-checked-bg:               @button-primary-bg-active;
 // Big default button
 @button-big-checked-text-margin-left:     @button-big-text-margin-left;
 @button-big-checked-text-margin-right:    @button-big-text-margin-right;
