Добавил отображение иконок в ddl
https://online.sbis.ru/opendoc.html?guid=28a0f562-e395-4e3b-84b9-890f553c66fd&des=
Ошибка в разработку 23.06.2017 Компонент выпадающего списка не реализован, как в стандартах. Нет возможность из набора данных указа…

--- a/components/DropdownList/DropdownList.less
+++ b/components/DropdownList/DropdownList.less
@@ -105,6 +105,24 @@
        }
      }
    }
+
+   &.controls-DropdownList__hideText {
+      .controls-DropdownList__value {
+         display: none;
+      }
+   }
+
+   &.controls-DropdownList__hideIcon {
+      .controls-DropdownList__icon {
+         display: none;
+      }
+   }
+}
+
+.controls-DropdownList, .controls-DropdownList__picker {
+   .controls-DropdownList__icon {
+      margin-right: 5px;
+   }
 }
 
 .controls-DropdownList__picker {
