--- a/components/DropdownList/DropdownListItemContent.tmpl
+++ b/components/DropdownList/DropdownListItemContent.tmpl
@@ -1,1 +1,1 @@
-{{getPropertyValue(item, displayProperty)}}
+<span if="{{item.icon}}" class="{{item.icon}} controls-DropdownList__icon"></span>{{getPropertyValue(item, displayProperty)}}
