был установлен неверный line-height т.к. для полей ввода необходим line-height равный высоте поля за вычетом границ. https://online.sbis.ru/opendoc.html?guid=cfaf83a0-3222-4880-a1b5-46c1d54642df&des= Ошибка в разработку 11.07.2017 у контрола SBIS3.CONTROLS.MoneyTextBox базовая линия не по стандартусм. надошибку.…

--- a/components/TextBox/TextBox.less
+++ b/components/TextBox/TextBox.less
@@ -92,7 +92,7 @@
   position: relative;
   height: 100%;
   padding: @text-box-wrapper-padding;
-  line-height: @text-box-field-line-height;
+  line-height: @text-box-line-height;
   text-decoration: @text-box-text-decoration;
 }
 
