--- a/themes/genie/variables.less
+++ b/themes/genie/variables.less
@@ -738,6 +738,7 @@
 // -------- //
 
 @text-box-height:                         24px;
+@text-box-line-height:                    22px;
 @text-box-wrapper-padding:                0 7px;
 @text-box-border-radius:                  2px;
 @text-box-color:                          @default-text-color;
