--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -818,6 +818,7 @@
 // -------- //
 
 @text-box-height:                         24px;
+@text-box-line-height:                    22px;
 @text-box-wrapper-padding:                0 4px;
 @text-box-border-radius:                  0;
 @text-box-color:                          @default-text-color;
