--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -153,6 +153,7 @@
 @button-big-checked-icon-big-left-offset: @button-big-icon-big-left-offset;
 //Text box
 @text-box-field-line-height:              2.64rem !important;
+@text-box-line-height:                    @text-box-field-line-height;
 // Tab button
 @tab-button-large-secondAddText-font-size:0.4642rem;
 //Radio button
