--- a/themes/carry/variables.less
+++ b/themes/carry/variables.less
@@ -443,6 +443,7 @@
 // -------- //
 @text-box-height:                               40px;
 @text-box-field-line-height:                    35px !important;
+@text-box-line-height:                          @text-box-field-line-height;
 @text-box-border-color:                         #EAEAEA;
 @text-box-focus-bg:                             #F0F5FB;
 @text-box-bottom-border-color:                  #CCCCCC;
