https://online.sbis.ru/opendoc.html?guid=9a6382b9-b8d1-4e8f-b570-37b0b5e1675c&des= Ошибка в разработку 14.07.2017 Редизайн. Розница Онлайн. Кнопка-ссылка "Еще ..." не оформлена как ссылка в каталоге online-inside_…

--- a/themes/prestonew/theme.less
+++ b/themes/prestonew/theme.less
@@ -1090,3 +1090,14 @@ body .controls-ItemActions .controls-Button__icon.icon-size {
     height: 3rem;
   }
 }
+
+.controls-TreePager-container {
+    cursor: pointer;
+    display: inline-block;
+    font-size: .8571rem;
+    color: @link-text-color; //todo
+    text-decoration: none;
+    &:hover{
+     color: @link-hover-text-color;
+    }
+}
