--- a/components/FilterButton/FilterButtonArea/FilterButtonArea.tmpl
+++ b/components/FilterButton/FilterButtonArea/FilterButtonArea.tmpl
@@ -22,7 +22,7 @@
             <div class="controls__filterButton__area-content">
                 <ws:partial if="{{ template }}" template="{{ template }}" scope="{{ componentOptions }}"/>
             </div>
-            <div class="controls__filterButton__area-footer {{ (!historyController && !additionalFilterParamsTemplate) ? 'ws-hidden' }}">
+            <div class="controls__filterButton__area-footer {{ ((!historyController || !historyController.getHistory()) && !additionalFilterParamsTemplate) ? 'ws-hidden' }}">
                 <ws:SBIS3.CONTROLS.AdditionalFilterParams
                         if="{{ additionalFilterParamsTemplate }}"
                         template="{{ additionalFilterParamsTemplate }}"
