https://online.sbis.ru/opendoc.html?guid=e7e18d65-34cb-40d9-a17b-f6da053dd51e&des= Ошибка в разработку 17.07.2017 Сметы. Скрывается название работы или материала при срабатывании автодополнения если убрать курсор с…

--- a/themes/online/variables.less
+++ b/themes/online/variables.less
@@ -2321,7 +2321,7 @@
 @controls-FieldLink-border-color-focus-hover:      @gray-ccc-color;
 @controls-FieldLink-border-color-picker-show:      @controls-FieldLink-border-color-focus-hover;
 @controls-FieldLink-border:                        1px solid;
-@controls-FieldLink-picker-show-color:             @white-color;
+@controls-FieldLink-picker-show-color:             @default-text-color;
 @controls-FieldLink-picker-show-field-color:       @default-text-color;
 
 @controls-FieldLink-fieldWrapper-margin:           0;
