--- a/components/ComboBox/ComboBox.less
+++ b/components/ComboBox/ComboBox.less
@@ -16,10 +16,7 @@
    .controls-TextBox__fieldWrapper {
       position: relative;
       white-space: nowrap;
-      .flexbox();
       .controls-TextBox__field {
-         .flex-shrink(0);
-         overflow: hidden;
          &.controls-ComboBox__field {
             font: @combo-box-field-font;
             font-size: @text-box-field-font-size;
@@ -141,6 +138,16 @@
          }
       }
    }
+
+   &.controls-ComboBox__ellipsis {
+      .controls-TextBox__fieldWrapper {
+         .controls-TextBox__field {
+            &.controls-ComboBox__fieldNotEditable {
+               .text-overflow();
+            }
+         }
+      }
+   }
 }
 
 .controls-ComboBox__picker.controls-FloatArea {
@@ -184,6 +191,12 @@
          }
       }
    }
+}
+
+// TODO: what is it - modifier?
+.controls-ComboBox__inputWrapper {
+   height: 100%;
+   margin-right: @combo-box-input-wrapper-right-offset;
 }
 
 .ws-is-ie10 {
