https://online.sbis.ru/opendoc.html?guid=721db3bd-26b2-434e-9af6-0b11941fdf85&des= Ошибка в разработку 22.06.2017 Чекбокс множественного выбора в таблично представлении расположен вертикально не по центру.…

--- a/themes/prestonew/variables.less
+++ b/themes/prestonew/variables.less
@@ -629,7 +629,7 @@
 @data-grid-edge-cell-separator-color:     rgba(0, 0, 0, 0.1);
 @data-grid-td-checkbox-width:             1.75rem;
 @data-grid-td-visible-checkbox-width:     1.75rem;
-@data-grid-check-box-top:                 0;
+@data-grid-check-box-top:                 -@default-border-width;
 @data-grid-cell-separator-color:          rgba(0, 0, 0, 0.1);
 @data-grid-cell-border-width:             @default-border-width 0;
 @data-grid-partScroll-notScrolledCell-Color:@basic-block-bg-color;
