https://online.sbis.ru/opendoc.html?guid=a494696b-f37e-44f5-a020-a05d643656c1&des= Ошибка в разработку 02.07.2017 Windows 10 Edge. Торги - в реестре торгов количество торгов на странице съезжает вниз (см. скрин) Ка…

--- a/components/Pager/Pager.less
+++ b/components/Pager/Pager.less
@@ -26,6 +26,9 @@
    .controls-Pager__pageSize-container select, .controls-Pager__pageSize-container .controls-DropdownList__text{
       font-size: 11px;
    }
+   .controls-Pager__pageSize-container {
+     line-height: 20px;
+   }
 }
 
 @-moz-document url-prefix() {
