--- a/components/RichEditor/RichEditorComponents/RichEditorToolbar/RichEditorToolbar.less
+++ b/components/RichEditor/RichEditorComponents/RichEditorToolbar/RichEditorToolbar.less
@@ -129,8 +129,8 @@
 }
 
 /* Блок смайлов */
-.fre-smiles {
-   &.controls-MenuButton__Menu {
+.controls-RichEditorToolbar__smilesPicker {
+   &.controls-Menu {
       width: 200px;
       padding: 0 0 4px 0 !important;
       .controls-ListView__item.controls-MenuItem {
@@ -144,16 +144,6 @@
          &:hover {
             color: #313E78
          }
-      }
-   }
-   &.controls-MenuButton {
-      .ws-fre__smile {
-         height: 24px;
-      }
-   }
-   .controls-MenuItem {
-      .ws-fre__smile {
-         height: 24px;
       }
    }
    //необходимо сдвигать picker на 2px тк в тулбаре нестандартная menuButton
@@ -189,13 +179,27 @@
          }
       }
    }
-   .fre-smiles {
+   .controls-RichEditorToolbar__smilesPicker {
       width: 192px;
       font-family: 'EmojiFont','TensorFont', sans-serif;
       &.controls-MenuButton__Menu {
          .controls-ListView__item {
             font-size: 18px;
             width: 31px;// 23 ширина смайла на desktop`e 10 ios + 8 отступ
+         }
+      }
+   }
+}
+
+.ws-is-windows-8, .ws-is-windows-10, .ws-is-firefox {
+   .controls-RichEditorToolbar__smilesPicker {
+      width: 200px;
+      font-family: 'EmojiFont', 'TensorFont', sans-serif;
+      &.controls-MenuIcon__Menu {
+         &.controls-Menu__hide-menu-header.controls-IconButton__round-border{
+            .controls-ListView__item{
+               width: 33px;
+            }
          }
       }
    }
