--- a/components/RichEditor/RichEditorComponents/RichEditorToolbar/RichEditorToolbar.less
+++ b/components/RichEditor/RichEditorComponents/RichEditorToolbar/RichEditorToolbar.less
@@ -182,7 +182,7 @@
    .controls-RichEditorToolbar__smilesPicker {
       width: 192px;
       font-family: 'EmojiFont','TensorFont', sans-serif;
-      &.controls-MenuButton__Menu {
+      &.controls-Menu {
          .controls-ListView__item {
             font-size: 18px;
             width: 31px;// 23 ширина смайла на desktop`e 10 ios + 8 отступ
@@ -194,12 +194,11 @@
 .ws-is-windows-8, .ws-is-windows-10, .ws-is-firefox {
    .controls-RichEditorToolbar__smilesPicker {
       width: 200px;
-      font-family: 'EmojiFont', 'TensorFont', sans-serif;
-      &.controls-MenuIcon__Menu {
-         &.controls-Menu__hide-menu-header.controls-IconButton__round-border{
-            .controls-ListView__item{
-               width: 33px;
-            }
+      font-family: 'TensorFont', sans-serif;
+      &.controls-Menu {
+         .controls-ListView__item {
+            font-size: 24px;
+            width: 33px;// 23 ширина смайла на desktop`e 10 ios + 8 отступ
          }
       }
    }
